# Statistical-Academic-Analysis

./: .env.example  .gitignore  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml  manual_tecnico.html  manual_usuario.html  start.sh
backend/: Dockerfile  Dockerfile.worker  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_seed_subsistemas.py  0003_upload_job_audit_fields.py  0004_fix_upload_job_status_length.py  0005_add_directivo_role_audit_logs.py  0006_upload_job_mapping_config.py  0007_rename_roles.py  0008_add_caracterizacion.py  0009_add_becas.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: audit.py  auth.py  caracterizacion.py  docentes.py  eficiencia.py  health.py  matricula.py  rendimiento.py  reports.py  subsistemas.py  templates.py  uploads.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  audit_log.py  beca.py  caracterizacion.py  evaluacion.py  matricula.py  subsistema.py  titulacion.py  upload_job.py  user.py
backend/app/schemas/: auth.py  indicadores.py  subsistema.py  upload.py  user.py
backend/app/services/: audit.py  csv_processor.py  dataset_definitions.py  excel_analyzer.py  formulas.py  indicadores.py  pdf_export.py  upload_diff.py
backend/app/services/templates/: reporte.html
backend/app/workers/: celery_app.py  tasks.py
backend/scripts/: create_admin.py
backend/tests/: test_becas.py  test_csv_processor.py  test_excel_analyzer.py  test_formulas.py  test_upload_diff.py
frontend/: Dockerfile  (+7 more)
(+39 files in other folders)
