[project]
name = "academia-stats-backend"
version = "0.1.0"
description = "Plataforma de Análisis Estadístico Académico - Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.6",
    "uvicorn[standard]==0.32.1",
    "gunicorn==23.0.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "passlib[argon2]==1.7.4",
    "argon2-cffi==23.1.0",
    "pyjwt==2.10.1",
    "python-multipart==0.0.20",
    "pandas==2.2.3",
    "polars==1.18.0",
    "numpy==2.2.1",
    "celery[redis]==5.4.0",
    "redis==5.2.1",
    "weasyprint==63.1",
    "jinja2==3.1.5",
    "openpyxl==3.1.5",
    "slowapi==0.1.9",
    "httpx==0.28.1",
    "email-validator==2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
    "types-passlib==1.7.7.20241221",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
